2022-10-07T08:23:56Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203314002
* notice: last 14d: unq all: 3 24
* notice: prev accum: outdated-unq outdated-all / unq all: 201 374 / 217 400
* notice: next accum: outdated-unq outdated-all / unq all: 201 374 / 216 398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-23]

2022-10-07T01:50:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3201687008
* notice: last 14d: unq all: 3 26
* notice: prev accum: outdated-unq outdated-all / unq all: 199 371 / 216 398
* notice: next accum: outdated-unq outdated-all / unq all: 201 374 / 217 400
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-22] / []

2022-10-06T16:28:42Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3198841756
* notice: last 14d: unq all: 3 27
* notice: prev accum: outdated-unq outdated-all / unq all: 199 371 / 216 399
* notice: next accum: outdated-unq outdated-all / unq all: 199 371 / 216 398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-22]

2022-10-06T08:25:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195657171
* notice: last 14d: unq all: 3 28
* notice: prev accum: outdated-unq outdated-all / unq all: 199 371 / 217 400
* notice: next accum: outdated-unq outdated-all / unq all: 199 371 / 216 399
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -1 / 1 2
* notice: removed / changed dates: [] / [2022-09-22]

2022-10-06T01:37:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193906871