@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-07T08:23:56Z",
-  "count_outdated" : 374,
-  "uniques_outdated" : 201,
-  "count" : 398,
-  "uniques" : 216,
+  "timestamp" : "2022-10-07T16:28:55Z",
+  "count_outdated" : 377,
+  "uniques_outdated" : 203,
+  "count" : 400,
+  "uniques" : 217,
   "clones" : [
-    {
-      "timestamp": "2022-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-24T00:00:00Z",
       "count": 2,
