@@ -1,3 +1,11 @@
+2022-10-07T16:28:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3206241309
+* notice: last 14d: unq all: 3 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 201 374 / 216 398
+* notice: next accum: outdated-unq outdated-all / unq all: 203 377 / 217 400
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-07T08:23:56Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203314002
 * notice: last 14d: unq all: 3 24
